public/stylesheets/style.css
html, body {height:96%}

body {
padding:0;
margin:0;
background:#FFF;
color: #666;
font-size: 12px;
}

a {
color:#00B7FF;
text-decoration:none;
}

h2 span {
font-weight:400;
font-size:25px;
color:#39F;
}

pre {
background:#eef;
display:inline-block;
padding-right:15px;
margin-left:15px;
}

p {
/*margin-top:3px;
margin-bottom:3px;*/
font-family:Verdana, Georgia,Serif;
font-size: 12px;
}


label {
font-family:Verdana, Georgia,Serif;
}


.hidden {
visibility:hidden;
}

.unhidden {
visibility:visible;
}

.inbox {
width: 50px; 
padding: 2px
}

textarea {
    resize: none;
}

label {
    width:60px;
    line-height:23px;
    padding-left:5px;
    margin:5px;
	font-size:14px;
  /*  border: 1px solid #000;*/
    float:left;
  /*  background-color:#eef;*/
    color:#003;
}
/*color {
    width:100px;
    height:23px;
    margin:5px;
    border: 1px solid #000;
    text-align:center;
    float:right;
	font-size:12px;	
}*/

.topicons {
	position:relative;
	top:20px;
	width:16px;
	height:16px;
}

.combo {
	position:relative;
	top:20px;
	width:100px;
	height:20px;
}

* html #outer{height:100%;} /* IE6 and under treat height as min-height anyway*/


#header{
/*background:#125699;
//border-top:1px solid #fff;
//border-bottom:1px solid #fff;*/
color: #fff;
height:80px;/* ie 7 haslayout fix */
text-decoration:none;
}

#leftdiv {
width:100px;
float:left;
}

#accordion{
height:100%;
}

#toolsdiv {
height:100%;
overflow:hidden;
}


#canvasId{
float:none;
overflow:auto;
background-color:#FFF;
position:relative;
}

#containerDiv{
	float:none;
	overflow:auto;
	background-color:#AAB0BB;
	position:absolute;
	left:100px;
	top:103px;
}


#containerBody{
	float:none;
	overflow:auto;
	background-color:#D3DAE5;
	position:relative;
	
}

#leftdiv p {padding-left:2px;padding-right:2px}
#right {display:none; width:0px; height:0px;}

#version {
    color: #AAAAAA;
    float: right;
    font-family: arial;
    font-size: 13px;
    margin: 5px 30px 0 0;
}
#user {
    color: #AAAAAA;
    float: right;
    font-family: arial;
    font-size: 13px;
    margin: 5px 30px 0 0;
}

#menuicons{
/*margin: 55px 20px 0px 0px;*/
float: right;
margin: 55px -300px 0 0;
}

#menuicons img{
margin:0 5px 0 5px;
cursor:pointer;
}

#logo{
position:absolute;
left:10px;
}

#leftdiv img{
cursor: pointer;
}

.tools{
margin:-12px 0 5px -30px;
cursor: pointer;
width:100px;
height:100px;
background:url('../images/tools_sprite.png') no-repeat;
}


#logo-wrapper{
	float:left;
	margin:15px 0 0 30px;
}
#logo-tag-wrapper{
	font-family:arial;
    font-size:14px;
	float:right;
	text-decoration:none;
}
#logo-tag-wrapper:hover{
color:#026CD0;
}
#icons-wrapper{
	float:right;
}

.ui-accordion-content{
	background-color:#D3DAE5;
}

.shape-active{
	background-color:#9BA2AD;
	color:#FFF;
	box-shadow: -1px -1px 2px 1px #666666 inset;
	-webkit-box-shadow:-1px -1px 2px 1px #666666 inset;
	-moz-box-shadow: -1px -1px 2px 1px #666666 insets;
}

#shape{
	text-align:center;
}

#shape img{
	display:inline-block;
}
#shape-label{
	text-align:center !important;
	clear:both !important;
	position: relative;
	top: -10px;
}

.ui-accordion-content{
	margin:0px !important;
	padding:0px !important;

}

div.scroller{
	cursor:pointer;
}

.scroller-up{
	height: 14px;
	background: #AAAAAA url('../images/up_arrow.png') no-repeat center center;
}

.scroller-down{
	height: 14px;
	background: #8F98A6 url('../images/down_arrow.png') no-repeat center center;
}

.shapesHolder{
	overflow:hidden;
}

.scrollerContentHolder{
	position:relative;
}


#popUpDiv {
position:absolute;
background-color:#eeeeee;
width:300px;
height:300px;
z-index: 9002;
}
#helpDiv {
position:absolute;
background-color:#eeeeee;
width:800px;
height:600px;
z-index: 9003;

}
#helpInnerDiv {
padding:15px !important;
}
#helpInnerDiv h1 {background:#474747;color:white;padding:10px;}

#blanket {
background-color:#111;
opacity: 0.65;
filter:alpha(opacity=65);
position:absolute;
z-index: 9001;
top:0px;
left:0px;
width:100%;
}
#closediv  a{
text-decoration:none;
font-family:arial;
font-size:14px;
color:white;
}

input.file {
	position: relative;
	top:20px;
	width:16px;
	height:16px;
	text-align: right;
	visibility:hidden;
	z-index: 2;
}

.rightFloater{
	float:right;
}

#introContainer{
   width: 300px;
   height: 300px;
   position: absolute;
   left: 50%;
   top: 50%;
   margin-left: -150px;
   margin-top: -150px;
}

